@@ -2,6 +2,10 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2023-04-09:
+
+- Fixed command line redrawing on resizing the window with --multiline off.
+
 2023-04-08:
 
 - Fixed a termcap(5) detection bug that broke multiline editing on FreeBSD.
